split some logic

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -70,6 +70,10 @@ Style/SafeNavigation:
     - blank?
     - presence
 
+Style/ModuleFunction:
+  Enabled: true
+  EnforcedStyle: extend_self
+
 Lint/AmbiguousBlockAssociation:
   Exclude:
     - 'spec/**/*'
