--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -74,6 +74,18 @@ Style/ModuleFunction:
   Enabled: true
   EnforcedStyle: extend_self
 
+Metrics/ClassLength:
+  Max: 150
+
+Metrics/MethodLength:
+  Max: 20
+
+Metrics/ModuleLength:
+  Max: 120
+
+Metrics/AbcSize:
+  Max: 18
+
 Lint/AmbiguousBlockAssociation:
   Exclude:
     - 'spec/**/*'
